# tinyrag

./: .benedict.method.yaml  .dockerignore  .gitignore  .metadata.benedict  CLAUDE.md  DECISION_DOCUMENT.md  Dockerfile  MILESTONE_1_STATUS.md  Makefile  README.md  docker-build.sh  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml  docker.yml  release.yml  smoke.yml
benchmarks/embedding-throughput/: results.json
benchmarks/latency/: results.json
docs/: README.md  USAGE_PATTERNS.md
docs/decisions/: 001-library-not-service.md  002-solid-architecture.md  003-shallow-interface-deep-config.md  004-nested-configuration.md  005-portable-file-format.md  006-technology-stack.md  007-agent-tools.md  010-workspace-scale-limits.md  README.md
docs/plans/: FINAL_PLAN.md  MILESTONE_2_PLAN.md
docs/problems/: 00-problem-statement.md  README.md
docs/proposals/: ARCHITECTURE.md  CONFIG_EXPLORATION.md  DEEP_CONFIG_PROPOSAL.md  README.md
raglet/: __init__.py  cli.py  cli_utils.py  utils.py
raglet/config/: config.py
raglet/core/: rag.py
raglet/embeddings/: generator.py
raglet/processing/: chunker.py
raglet/storage/: __init__.py  directory_backend.py  interfaces.py  sqlite_backend.py  zip_backend.py
raglet/vector_store/: faiss_store.py  interfaces.py
smoke/: Dockerfile  Dockerfile.dev
tests/: __init__.py
tests/e2e/: test_cli_e2e.py  test_e2e_basic.py  test_e2e_persistence.py  test_e2e_search.py
tests/fixtures/: high_score_test_content.txt  large_test_content.txt  search_test_content.txt
tests/integration/: test_cli.py  test_directory_format.py  test_extractor_factory.py  test_full_pipeline.py  test_pipeline.py  test_save_load.py  test_search_accuracy.py  test_search_deterministic.py  test_search_precise.py
tests/unit/: test_chunk.py  test_chunker.py  test_cli_commands.py  test_config.py  test_config_m2.py  test_directory_backend.py  test_embeddings.py  test_extractors.py  test_model_validation.py  test_sqlite_backend.py  test_vector_store.py
tinyrag/: __init__.py
tinyrag/config/: __init__.py  config.py
tinyrag/core/: __init__.py  chunk.py  rag.py
tinyrag/embeddings/: __init__.py  generator.py  interfaces.py
tinyrag/processing/: __init__.py  chunker.py  extractor_factory.py  interfaces.py
tinyrag/processing/extractors/: __init__.py  markdown_extractor.py  text_extractor.py
tinyrag/vector_store/: __init__.py  faiss_store.py  interfaces.py
