[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raglet"
version = "0.2.0"
description = "Portable memory for small text corpora - create searchable .raglet files"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "raglet contributors", email = "michael.karotsieris@gmail.com"}
]
maintainers = [
    {name = "raglet contributors", email = "michael.karotsieris@gmail.com"}
]
keywords = ["rag", "embeddings", "vector-search", "retrieval", "nlp", "semantic-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
]

[project.scripts]
raglet = "raglet.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-PyYAML>=6.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
pdf = [
    "PyPDF2>=3.0.0",
]
html = [
    "beautifulsoup4>=4.12.0",
]
docx = [
    "python-docx>=1.1.0",
]
config = [
    "pyyaml>=6.0",
]
all = [
    "raglet[dev,pdf,html,docx,config]",
]

[project.urls]
Homepage = "https://github.com/yourusername/raglet"
Documentation = "https://github.com/yourusername/raglet/docs"
Repository = "https://github.com/yourusername/raglet"
Issues = "https://github.com/yourusername/raglet/issues"

[tool.setuptools]
packages = ["raglet"]

[tool.setuptools.package-data]
raglet = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "raglet.__version__"}

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

# Exclude third-party libraries without type stubs or with Python 3.10+ syntax
[[tool.mypy.overrides]]
module = [
    "faiss.*",
    "torch.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true
follow_imports = "skip"  # Don't check source files of these modules

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=raglet",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-v",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]

[tool.coverage.run]
source = ["raglet"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
